# mkdocs-click

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  azure-pipelines.yml  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: autofix.yml  ci.yml  publish.yml  tests.yml
.tools/: copier-answers.yml  test.sh
example/: index.md  mkdocs.yml
mkdocs_click/: __init__.py  __version__.py  _docs.py  _exceptions.py  _extension.py  _loader.py  _processing.py  common.py  extension.py  parser.py
scripts/: build  docs  format  install  publish  style  test
tests/: __init__.py  conftest.py  test_docs.py  test_extension.py  test_loader.py  test_parser.py  test_processing.py
tests/app/: cli.py  expected-enhanced.md  expected-sub-enhanced.md  expected-sub.md  expected.md
tests/click/: cli.py  docs.txt
tests/unit/: test_docs.py
